--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </head>
 <body>
   <header>
-    <h1>Call Soon Services AB</h1>
+    <h1>Call Soon Services</h1>
     <p>Reliable yard work, handyman, and personal services in Tynningö</p>
     <nav>
       <a href="#about">Om oss</a>
@@ -136,9 +136,6 @@
       <a href="#market">Marknad</a>
       <a href="#contact">Kontakt</a>
     </nav>
-    <button id="lang-toggle" style="margin-top:1rem; padding:0.4rem 1rem; border-radius:var(--radius); border:none; background:var(--accent); color:#fff; font-weight:500; cursor:pointer;">
-      English
-    </button>
   </header>
   <main>
     <section id="about">
@@ -172,9 +169,8 @@
     <section id="market">
       <h2>Marknad & Differentiering</h2>
       <ul>
-        <li>Vi vänder oss till villaägare, äldre, yrkesverksamma, småföretagare och fastighetsägare inom 25 km från Tynningö.</li>
-        <li>Personlig, lokal och pålitlig service med nöjd kund-garanti.</li>
-        <li>Utmärkande marknadsföring och rekommendationer.</li>
+        <li>Vi vänder oss till villaägare, äldre, yrkesverksamma, småföretagare och fastighetsägare inom 25 km från Norra Tynningö.</li>
+        <li>Personlig, lokal och pålitlig service.</li>
         <li>Flexibel, säsongsanpassad verksamhet för maximal nytta och minskade kostnader.</li>
         <li>Fokus på kärnkompetens och kundrelationer.</li>
       </ul>
