feat: add sound effects for game interactions and update HTML link text

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h2>#projects</h2>
         <p><a href="karlsune.org">this page</a></p>
         <p><a href="game/game.html">this matter.js animated page</a></p>
-        <p><a href="null">UNDER CONSTRUCTION</a></p>
+        <p><a href="null">Do not click me</a></p>
         <p><a href="https://github.com/karlsune">my github repositories</a></p>
         <p><a href="https://www.kth.se/en">kth student portal</a></p>
       </section>
@@ -140,6 +140,7 @@
       <section id="links">
         <p><a href="https://github.com/karlsune">github</a></p>
         <p><a href="https://www.linkedin.com/in/karlsune/">linkedin</a></p>
+
         <p><a href="#top">top</a></p>
       </section>
     </footer>
@@ -148,7 +149,7 @@
     <button id="back-to-top" aria-label="Back to top">⬆️</button>
 
     <!--
-        JAVASCRIPT: Handles mobile menu, data storage, and animated subtitle.
+        JAVASCRIPT: Handles animated subtitles, storage, and interactivity.
     -->
     <script src="./script/subtitleRender.js"></script>
     <script src="./script/array.js"></script>
@@ -157,8 +158,7 @@
     <noscript>
       <div id="noScriptWarn">
         <strong>Notice:</strong> This site works best with JavaScript
-        enabled.<br />
-        Some features require JavaScript.
+        enabled.
       </div>
     </noscript>
   </body>
