feat: update site title and enhance projects section with new links

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         MAIN: Contains the site title, animated subtitle, and all main sections.
     -->
     <main>
-      <div class="site-title">karlsune's portfolio site.</div>
+      <div class="site-title">karlsune's vibe coded portfolio site.</div>
       <div class="site-subtitle" id="site-subtitle" aria-live="polite">
         web developer
       </div>
@@ -86,16 +86,19 @@
       </section>
 
       <!--
-        projects section:
         PROJECTS SECTION:
-        This section showcases links to various projects, including subpages and external resources. -->
+        This section showcases links to various projects, including subpages and external resources.
+        MEGA DISCLAIMER: I AM A VIBE CODER BIG PICTURE ENGINEER -->
       <section id="projects">
         <h2>#projects</h2>
-        <p><a href="karlsune.org">this page</a></p>
-        <p><a href="game/game.html">this matter.js animated page</a></p>
+        <p><a href="https://www.twitch.tv/karlsune">my twitch channel</a></p>
+        <p><a href="https://github.com/karlsune/portfolio-site">this portfolio site</a></p>
+        <p><a href="clock-web-app.htm">this clock web app</a></p>
+        <p><a href="karlsune.org">hosting this page</a></p>
+        <p><a href="game/game.html">this game web app utilizing matter.js</a></p>
         <p><a href="null">Do not click me</a></p>
-        <p><a href="https://github.com/karlsune">my github repositories</a></p>
-        <p><a href="https://www.kth.se/en">kth student portal</a></p>
+        <p><a href="https://github.com/karlsune">all my github repositories</a></p>
+        
       </section>
 
       <section id="about">
