feat: replace favicon with GIF and update personal information in the about section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>portfolio site | karlsune</title>
 
     <!-- links -->
-    <link rel="icon" href="./icon/icon.ico" />
+    <link rel="icon" href="./icon/icon.gif" />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap"
@@ -103,21 +103,22 @@
 
       <section id="about">
         <h2>#about</h2>
-        <p>karlsune</p>
-        <p>level: 26</p>
+        <p>name: Karl Sune</p>
+        <p>age: 26</p>
         <p>student@<a href="https://www.kth.se/en">kth</a></p>
       </section>
 
       <section id="education">
         <h2>#education</h2>
-        <p>high school diploma</p>
+        <p>graduated high school 2019</p>
       </section>
-
 
 
       <section id="occupation">
         <h2>#occupation</h2>
-        <p>student</p>
+        <p>
+          I am currently pursuing a bachelors in engineering/medtech at KTH. My passion for healthcare and helping others drives me to learn how technology can improve care. I aim to combine my technical skills with compassion to make a positive impact in the world.
+        </p>
       </section>
 
       <section id="skills">
