--- a/clock-web-app.htm
+++ b/clock-web-app.htm
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Twitch Clock Overlay</title>
-    <!-- Google Fonts: Roboto Mono for a clean clock look -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -22,9 +21,10 @@
         }
         .clock-container {
             background: rgba(30, 30, 30, 0.8); /* semi-transparent for maskability */
-            border-radius: 2em;
+            border-radius: 0; /* No rounding */
             box-shadow: 0 4px 32px rgba(0,0,0,0.3);
-            padding: 1.5em 3em;
+            padding: 0; /* No padding */
+            border: none; /* No border */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -50,15 +50,13 @@
         function pad(n) { return n < 10 ? '0' + n : n; }
         function updateClock() {
             const now = new Date();
-            const h = pad(now.getHours());
-            const m = pad(now.getMinutes());
-            const s = pad(now.getSeconds());
-            document.getElementById('clock').textContent = `${h}:${m}:${s}`;
+            const h = pad(now.getUTCHours());
+            const m = pad(now.getUTCMinutes());
+            const s = pad(now.getUTCSeconds());
+            document.getElementById('clock').textContent = `${h}:${m}:${s} UTC`;
         }
         updateClock();
         setInterval(updateClock, 1000);
     </script>
 </body>
 </html>
-
-<!-- No additional code needed here. -->
