--- a/animated-polka-bar-barber-style.html
+++ b/animated-polka-bar-barber-style.html
@@ -15,11 +15,11 @@
         .bar-container {
             position: relative;
             width: 100vw;
-            height: 48px;
+            height: 38px;
             overflow: hidden;
-            background: linear-gradient(90deg, #232526 0%, #414345 100%);
+            background: linear-gradient(90deg, #282a36 0%, #44475a 100%);
             box-shadow: 0 4px 24px #000a;
-            border-bottom: 4px solid #00ffe7;
+            border-bottom: 4px solid #bd93f9;
         }
         .polka-dots {
             position: absolute;
@@ -32,12 +32,12 @@
             border-radius: 50%;
             opacity: 0.18;
             animation: breezeDots 16s linear infinite;
-            background: #00ffe7;
+            background: #bd93f9;
             animation-fill-mode: forwards;
         }
         @keyframes breezeDots {
             0% { opacity: 0.18; transform: translateX(0); }
-            62.5% { opacity: 0.18; } /* 10s of 16s = 62.5% */
+            62.5% { opacity: 0.18; }
             80% { opacity: 0.09; }
             100% { opacity: 0; transform: translateX(-120vw); }
         }
@@ -45,19 +45,26 @@
             position: relative;
             z-index: 2;
             display: flex;
+            flex-direction: row;
             align-items: center;
             height: 100%;
-            justify-content: center;
-            gap: 40px;
-            text-shadow: 0 2px 8px #00ffe7cc, 0 0 2px #000;
+            justify-content: flex-start;
+            gap: 16px;
+            text-shadow: 0 2px 8px #bd93f988, 0 0 2px #000;
+            padding: 0 12px 0 12px;
+        }
+        .ad-title, .ad-desc, .cta-btn {
+            flex: 0 1 auto;
+            min-width: 0;
         }
         .ad-title {
-            font-size: 2.5rem;
+            font-size: 1.1rem;
             font-weight: 900;
-            letter-spacing: 0.1em;
-            color: #00ffe7;
+            letter-spacing: 0.08em;
+            color: #bd93f9;
             text-transform: uppercase;
             animation: flicker 2s infinite alternate;
+            margin: 0;
         }
         @keyframes flicker {
             0%, 100% { opacity: 1; }
@@ -66,39 +73,45 @@
             55% { opacity: 0.85; }
         }
         .ad-desc {
-            font-size: 1.2rem;
-            color: #e0e0e0;
-            max-width: 400px;
-            letter-spacing: 0.05em;
+            font-size: 0.95rem;
+            color: #f8f8f2;
+            letter-spacing: 0.04em;
+            margin: 0;
+            flex: 1 1 auto;
+            overflow: visible;
+            text-overflow: unset;
+            white-space: normal;
         }
         .cta-btn {
-            background: #00ffe7;
-            color: #181a1b;
+            background: #bd93f9;
+            color: #282a36;
             border: none;
-            padding: 16px 32px;
-            font-size: 1.1rem;
+            padding: 8px 18px;
+            font-size: 0.95rem;
             font-weight: bold;
-            border-radius: 32px;
-            box-shadow: 0 2px 16px #00ffe799;
+            border-radius: 24px;
+            box-shadow: 0 2px 12px #bd93f966;
             cursor: pointer;
             transition: background 0.2s, color 0.2s;
             text-transform: uppercase;
-            margin-left: 24px;
+            margin-left: auto;
         }
         .cta-btn:hover {
-            background: #181a1b;
-            color: #00ffe7;
-            border: 2px solid #00ffe7;
+            background: #282a36;
+            color: #bd93f9;
+            border: 2px solid #bd93f9;
         }
         @media (max-width: 700px) {
             .ad-content {
                 flex-direction: column;
-                gap: 12px;
-                text-align: center;
+                gap: 8px;
+                text-align: left;
+                align-items: flex-start;
+                padding: 0 6px;
             }
-            .ad-title { font-size: 1.5rem; }
-            .ad-desc { font-size: 1rem; }
-            .cta-btn { margin-left: 0; }
+            .ad-title { font-size: 1rem; }
+            .ad-desc { font-size: 0.85rem; white-space: normal; }
+            .cta-btn { margin-left: 0; align-self: stretch; }
         }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Orbitron:700,900&display=swap" rel="stylesheet">
