--- a/animated-polka-bar-dracula2.html
+++ b/animated-polka-bar-dracula2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Animated Polka Bar - Barber Style</title>
+    <title>Animated Polka Bar - Dracula Style 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -19,7 +19,7 @@
             overflow: hidden;
             background: linear-gradient(90deg, #282a36 0%, #44475a 100%);
             box-shadow: 0 4px 24px #000a;
-            border-bottom: 4px solid #bd93f9;
+            border-bottom: 4px solid #ff79c6;
         }
         .polka-dots {
             position: absolute;
@@ -32,7 +32,7 @@
             border-radius: 50%;
             opacity: 0.18;
             animation: breezeDots 16s linear infinite;
-            background: #bd93f9;
+            background: #ff79c6;
             animation-fill-mode: forwards;
         }
         @keyframes breezeDots {
@@ -50,7 +50,7 @@
             height: 100%;
             justify-content: space-between;
             gap: 0;
-            text-shadow: 0 2px 8px #bd93f988, 0 0 2px #000;
+            text-shadow: 0 2px 8px #ff79c688, 0 0 2px #000;
             padding: 0 5px 0 12px;
         }
         .ad-title, .ad-desc, .cta-btn {
@@ -61,7 +61,7 @@
             font-size: 0.95rem;
             font-weight: 900;
             letter-spacing: 0.08em;
-            color: #bd93f9;
+            color: #ff79c6;
             text-transform: uppercase;
             animation: flicker 2s infinite alternate;
             margin: 0;
@@ -87,14 +87,14 @@
             white-space: normal;
         }
         .cta-btn {
-            background: #bd93f9;
+            background: #ff79c6;
             color: #282a36;
             border: none;
             padding: 8px 18px;
             font-size: 0.8rem;
             font-weight: bold;
             border-radius: 24px;
-            box-shadow: 0 2px 12px #bd93f966;
+            box-shadow: 0 2px 12px #ff79c666;
             cursor: pointer;
             transition: background 0.2s, color 0.2s;
             text-transform: uppercase;
@@ -105,8 +105,8 @@
         }
         .cta-btn:hover {
             background: #282a36;
-            color: #bd93f9;
-            border: 2px solid #bd93f9;
+            color: #ff79c6;
+            border: 2px solid #ff79c6;
         }
         @media (max-width: 700px) {
             .ad-content {
@@ -127,27 +127,24 @@
     <div class="bar-container">
         <div class="polka-dots" id="polkaDots"></div>
         <div class="ad-content">
-            <span class="ad-title">Karlsune</span>
-            <span class="ad-desc">Upgrade your look with precision tech streams from Karlsune. Where style meets the future.<br> Book your transformation today.</span>
-            <button class="cta-btn">Book Now</button>
+            <span class="ad-title">DraculaBar</span>
+            <span class="ad-desc">A new Dracula-inspired polka dot bar. Add your own content here!</span>
+            <button class="cta-btn">Action</button>
         </div>
     </div>
     <script>
         // Generate animated polka dots
         const polkaDots = document.getElementById('polkaDots');
-        const dotColors = ['#00ffe7', '#fff', '#00bfae'];
-        const barWidth = polkaDots.offsetWidth || window.innerWidth;
+        const dotColors = ['#ff79c6', '#f8f8f2', '#bd93f9'];
         for (let i = 0; i < 24; i++) {
             const dot = document.createElement('div');
             dot.className = 'dot';
             const size = 10 + Math.random() * 18;
             dot.style.width = dot.style.height = size + 'px';
-            // Start dots off-screen to the right, randomize vertical position
             dot.style.left = (100 + Math.random() * 20) + 'vw';
             dot.style.top = (10 + Math.random() * 70) + '%';
             dot.style.background = dotColors[Math.floor(Math.random() * dotColors.length)];
             dot.style.opacity = 0.14 + Math.random() * 0.16;
-            // Each dot gets a random duration and delay for a breezy effect
             const duration = 14 + Math.random() * 8;
             dot.style.animationDuration = duration + 's';
             dot.style.animationDelay = (-Math.random() * duration) + 's';
