style: update colors in barber style polka bar for consistency with Dracula theme

--- a/animated-polka-bar-barber-footer.html
+++ b/animated-polka-bar-barber-footer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Animated Polka Bar - Barber Style</title>
+    <title>Animated Polka Bar - Dracula Style 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -15,11 +15,12 @@
         .bar-container {
             position: relative;
             width: 100vw;
-            height: 38px;
+            height: 96px;
             overflow: hidden;
             background: linear-gradient(90deg, #282a36 0%, #44475a 100%);
-            box-shadow: 0 4px 24px #000a;
+            box-shadow: 0 -6px 32px #000a, 0 4px 24px #000a;
             border-bottom: 4px solid #ff79c6;
+            border-top: 2px solid #44475a;
         }
         .polka-dots {
             position: absolute;
@@ -45,29 +46,27 @@
             position: relative;
             z-index: 2;
             display: flex;
-            flex-direction: row;
-            align-items: center;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
             height: 100%;
-            justify-content: space-between;
-            gap: 0;
+            gap: 10px;
             text-shadow: 0 2px 8px #ff79c688, 0 0 2px #000;
-            padding: 0 5px 0 12px;
+            padding: 18px 24px 18px 24px;
         }
         .ad-title, .ad-desc, .cta-btn {
             flex: 0 1 auto;
             min-width: 0;
         }
         .ad-title {
-            font-size: 0.95rem;
+            font-size: 1.3rem;
             font-weight: 900;
             letter-spacing: 0.08em;
             color: #ff79c6;
             text-transform: uppercase;
             animation: flicker 2s infinite alternate;
-            margin: 0;
-            flex: 0 0 auto;
+            margin: 0 0 4px 0;
             text-align: left;
-            padding-right: 12px;
         }
         @keyframes flicker {
             0%, 100% { opacity: 1; }
@@ -76,32 +75,26 @@
             55% { opacity: 0.85; }
         }
         .ad-desc {
-            font-size: 0.8rem;
+            font-size: 1rem;
             color: #f8f8f2;
             letter-spacing: 0.04em;
-            margin: 0;
-            flex: 1 1 0;
-            text-align: center;
-            overflow: visible;
-            text-overflow: unset;
+            margin: 0 0 8px 0;
+            text-align: left;
             white-space: normal;
         }
         .cta-btn {
             background: #ff79c6;
             color: #282a36;
             border: none;
-            padding: 8px 18px;
-            font-size: 0.8rem;
+            padding: 10px 28px;
+            font-size: 1rem;
             font-weight: bold;
             border-radius: 24px;
             box-shadow: 0 2px 12px #ff79c666;
             cursor: pointer;
             transition: background 0.2s, color 0.2s;
             text-transform: uppercase;
-            margin-left: 0;
-            margin-right: 5px;
-            flex: 0 0 auto;
-            align-self: stretch;
+            align-self: flex-end;
         }
         .cta-btn:hover {
             background: #282a36;
@@ -109,45 +102,41 @@
             border: 2px solid #ff79c6;
         }
         @media (max-width: 700px) {
+            .bar-container { height: auto; }
             .ad-content {
-                flex-direction: column;
-                gap: 8px;
-                text-align: left;
-                align-items: flex-start;
-                padding: 0 6px;
+                padding: 12px 6px;
+                gap: 6px;
             }
-            .ad-title { font-size: 0.85rem; padding-right: 0; }
-            .ad-desc { font-size: 0.7rem; white-space: normal; text-align: left; }
-            .cta-btn { margin-left: 0; margin-right: 0; align-self: stretch; }
+            .ad-title { font-size: 1rem; }
+            .ad-desc { font-size: 0.85rem; }
+            .cta-btn { font-size: 0.85rem; width: 100%; align-self: stretch; }
         }
     </style>
+    
     <link href="https://fonts.googleapis.com/css?family=Orbitron:700,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="bar-container">
         <div class="polka-dots" id="polkaDots"></div>
         <div class="ad-content">
-            <span class="ad-title">Karlsune</span>
-            <span class="ad-desc">Upgrade your look with precision tech streams from Karlsune. Where style meets the future.<br> Book your transformation today.</span>
-            <button class="cta-btn">Book Now</button>
+            <span class="ad-title">DraculaBar</span>
+            <span class="ad-desc">A new Dracula-inspired polka dot bar. Add your own content here!</span>
+            <button class="cta-btn">Action</button>
         </div>
     </div>
     <script>
         // Generate animated polka dots
         const polkaDots = document.getElementById('polkaDots');
-        const dotColors = ['#00ffe7', '#fff', '#00bfae'];
-        const barWidth = polkaDots.offsetWidth || window.innerWidth;
+        const dotColors = ['#ff79c6', '#f8f8f2', '#bd93f9'];
         for (let i = 0; i < 24; i++) {
             const dot = document.createElement('div');
             dot.className = 'dot';
             const size = 10 + Math.random() * 18;
             dot.style.width = dot.style.height = size + 'px';
-            // Start dots off-screen to the right, randomize vertical position
             dot.style.left = (100 + Math.random() * 20) + 'vw';
             dot.style.top = (10 + Math.random() * 70) + '%';
             dot.style.background = dotColors[Math.floor(Math.random() * dotColors.length)];
             dot.style.opacity = 0.14 + Math.random() * 0.16;
-            // Each dot gets a random duration and delay for a breezy effect
             const duration = 14 + Math.random() * 8;
             dot.style.animationDuration = duration + 's';
             dot.style.animationDelay = (-Math.random() * duration) + 's';
