style: update animated polka bar design for improved layout and responsiveness

--- a/business/index.html
+++ b/business/index.html
@@ -141,10 +141,10 @@
     <section id="about">
       <h2>Om oss</h2>
       <div class="contact-card">
-        <div><strong>Telefon:</strong> <a href="tel:+46723179838">+46 723 - 17 98 38</a></div>
-        <div><strong>E-post:</strong> <a href="mailto:lillerik.sund@gmail.com">lillerik.sund@gmail.com</a></div>
-        <div><strong>Adress:</strong> Juliusbergsvägen 11, 134 92, Tynningö, Sverige</div>
-        <span>Org.nr: Call Soon Services AB / Karl Sune Tjänster AB</span>
+        <div><strong>Telefon:</strong> <a href="#">[redacted]</a></div>
+        <div><strong>E-post:</strong> <a href="#">[redacted]</a></div>
+        <div><strong>Adress:</strong> [redacted]</div>
+        <span>Org.nr: [redacted]</span>
       </div>
       <p>
         Vi erbjuder pålitliga och prisvärda tjänster inom trädgårdsarbete, hantverk och personlig träning till privatpersoner och företag i Tynningö med omnejd. Vårt mål är att leverera kundnöjdhet i varje uppdrag.
@@ -181,17 +181,17 @@
         Intresserad av våra tjänster eller av att investera i ett växande lokalt företag? Kontakta oss för mer information eller för att diskutera samarbetsmöjligheter.
       </p>
       <ul>
-        <li><strong>Telefon:</strong> <a href="tel:+46723179838">+46 723 - 17 98 38</a></li>
-        <li><strong>E-post:</strong> <a href="mailto:lillerik.sund@gmail.com">lillerik.sund@gmail.com</a></li>
-        <li><strong>Adress:</strong> Juliusbergsvägen 11, 134 92, Tynningö, Sverige</li>
+        <li><strong>Telefon:</strong> <a href="#">[redacted]</a></li>
+        <li><strong>E-post:</strong> <a href="#">[redacted]</a></li>
+        <li><strong>Adress:</strong> [redacted]</li>
       </ul>
       <p style="color:var(--muted);font-size:0.98em;">
-        <strong>Investeringsmöjlighet:</strong> Vi söker 50 000 SEK i lånefinansiering (0% ränta, 0% avgifter, 0% återbetalning första 12 månaderna). Investerare får 25% ägande, styrelseplats och del av vinsten. Kontakta oss för mer information.
+        <strong>Investeringsmöjlighet:</strong> Vi söker 50 000 SEK i angel funding. Kontakta oss för mer information.
       </p>
     </section>
   </main>
   <div class="footer">
-    &copy; 2025 Karl Sundström / Call Soon Services AB. All rights reserved.
+    &copy; 2025 [redacted]. All rights reserved.
   </div>
 </body>
 </html>
