--- a/animated-polka-bar-barber-footer.html
+++ b/animated-polka-bar-barber-footer.html
@@ -15,12 +15,12 @@
         .bar-container {
             position: relative;
             width: 100vw;
-            height: 96px;
+            height: 54px;
             overflow: hidden;
             background: linear-gradient(90deg, #282a36 0%, #44475a 100%);
-            box-shadow: 0 -6px 32px #000a, 0 4px 24px #000a;
-            border-bottom: 4px solid #ff79c6;
-            border-top: 2px solid #44475a;
+            box-shadow: 0 -4px 18px #000a, 0 2px 12px #000a;
+            border-bottom: 3px solid #ff79c6;
+            border-top: 1px solid #44475a;
         }
         .polka-dots {
             position: absolute;
@@ -46,26 +46,23 @@
             position: relative;
             z-index: 2;
             display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: center;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
             height: 100%;
-            gap: 10px;
+            gap: 12px;
             text-shadow: 0 2px 8px #ff79c688, 0 0 2px #000;
-            padding: 18px 24px 18px 24px;
-        }
-        .ad-title, .ad-desc, .cta-btn {
-            flex: 0 1 auto;
-            min-width: 0;
+            padding: 0 18px;
+            width: 100%;
         }
         .ad-title {
-            font-size: 1.3rem;
+            font-size: 1.05rem;
             font-weight: 900;
             letter-spacing: 0.08em;
             color: #ff79c6;
             text-transform: uppercase;
             animation: flicker 2s infinite alternate;
-            margin: 0 0 4px 0;
+            margin: 0;
             text-align: left;
         }
         @keyframes flicker {
@@ -74,27 +71,19 @@
             50% { opacity: 0.6; }
             55% { opacity: 0.85; }
         }
-        .ad-desc {
-            font-size: 1rem;
-            color: #f8f8f2;
-            letter-spacing: 0.04em;
-            margin: 0 0 8px 0;
-            text-align: left;
-            white-space: normal;
-        }
         .cta-btn {
             background: #ff79c6;
             color: #282a36;
             border: none;
-            padding: 10px 28px;
-            font-size: 1rem;
+            padding: 7px 22px;
+            font-size: 0.95rem;
             font-weight: bold;
-            border-radius: 24px;
+            border-radius: 20px;
             box-shadow: 0 2px 12px #ff79c666;
             cursor: pointer;
             transition: background 0.2s, color 0.2s;
             text-transform: uppercase;
-            align-self: flex-end;
+            align-self: center;
         }
         .cta-btn:hover {
             background: #282a36;
@@ -104,12 +93,11 @@
         @media (max-width: 700px) {
             .bar-container { height: auto; }
             .ad-content {
-                padding: 12px 6px;
+                padding: 6px 4px;
                 gap: 6px;
             }
-            .ad-title { font-size: 1rem; }
-            .ad-desc { font-size: 0.85rem; }
-            .cta-btn { font-size: 0.85rem; width: 100%; align-self: stretch; }
+            .ad-title { font-size: 0.95rem; }
+            .cta-btn { font-size: 0.85rem; padding: 6px 12px; width: auto; }
         }
     </style>
     
@@ -120,8 +108,7 @@
         <div class="polka-dots" id="polkaDots"></div>
         <div class="ad-content">
             <span class="ad-title">DraculaBar</span>
-            <span class="ad-desc">A new Dracula-inspired polka dot bar. Add your own content here!</span>
-            <button class="cta-btn">Action</button>
+            <button class="cta-btn">Explore</button>
         </div>
     </div>
     <script>
