style: enhance animated polka bar design with improved layout, colors, and responsiveness

--- a/animated-polka-bar-barber-style.html
+++ b/animated-polka-bar-barber-style.html
@@ -18,8 +18,10 @@
             height: 38px;
             overflow: hidden;
             background: linear-gradient(90deg, #282a36 0%, #44475a 100%);
-            box-shadow: 0 4px 24px #000a;
-            border-bottom: 4px solid #ff79c6;
+            border-radius: 0 0 18px 18px;
+            border-bottom-width: 0px;
+            border-top: 1px solid #ff79c6;
+            box-shadow: 0 2px 24px #ff79c6aa, 0 1px 8px #000a;
         }
         .polka-dots {
             position: absolute;
