--- a/animated-polka-bar-footer.html
+++ b/animated-polka-bar-footer.html
@@ -13,7 +13,11 @@
             overflow-x: hidden;
         }
         .bar-container {
-            position: relative;
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            z-index: 1000;
             width: 100vw;
             height: 54px;
             overflow: hidden;
@@ -78,7 +82,7 @@
             padding: 8px 28px;
             font-size: 1.05rem;
             font-weight: bold;
-            border-radius: 24px;
+            border-radius: 0;
             box-shadow: 0 2px 16px #bd93f966;
             letter-spacing: 0.08em;
             font-family: 'Orbitron', 'Segoe UI', Arial, sans-serif;
@@ -99,21 +103,21 @@
                 padding: 6px 8px;
                 gap: 8px;
             }
-            .ad-title { font-size: 1rem; }
-            .cta-btn { font-size: 0.9rem; padding: 6px 12px; width: auto; }
+            .ad-title { font-size: 1.05rem; }
+            .cta-btn { font-size: 0.95rem; padding: 6px 12px; width: auto; }
         }
     </style>
     
     <link href="https://fonts.googleapis.com/css?family=Orbitron:700,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="bar-container">
+    <footer class="bar-container">
         <div class="polka-dots" id="polkaDots"></div>
         <div class="ad-content">
-            <span class="ad-title"><span style="color:#ff79c6;">Karl</span><span style="color:#fff;">sune</span></span>
-            <button class="cta-btn"><span style="vertical-align:middle;">☾</span> Night Mode</button>
+            <span class="ad-title">Karlsune</span>
+            <button class="cta-btn"><span style="vertical-align:middle; padding: 0 8px;">Night Mode</span></button>
         </div>
-    </div>
+    </footer>
     <script>
         // Generate animated polka dots
         const polkaDots = document.getElementById('polkaDots');
