style: correct border-radius for footer to enhance visual consistency

--- a/animated-polka-bar-footer.html
+++ b/animated-polka-bar-footer.html
@@ -22,7 +22,7 @@
             height: 54px;
             overflow: hidden;
             background: linear-gradient(90deg, #282a36 0%, #44475a 100%);
-            border-radius: 0 0 18px 18px;
+            border-radius: 18px 18px 0 0;
             border-top: 1px solid #ff79c6;
             box-shadow: 0 2px 24px #ff79c6aa, 0 1px 8px #000a;
         }
