style: update ad title placeholder in footer for improved clarity

--- a/animated-polka-bar-footer.html
+++ b/animated-polka-bar-footer.html
@@ -114,8 +114,7 @@
     <footer class="bar-container">
         <div class="polka-dots" id="polkaDots"></div>
         <div class="ad-content">
-            <span class="ad-title">Karlsune</span>
-            <button class="cta-btn"><span style="vertical-align:middle; padding: 0 8px;">Night Mode</span></button>
+            <span class="ad-title">YOUR AD HERE</span>
         </div>
     </footer>
     <script>
