--- a/hl2-hud-overlay.html
+++ b/hl2-hud-overlay.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>RPG HUD Overlay</title>
     <style>
+        html {
+            /* Make everything sharper on high-DPI screens */
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
         body {
             background: #181818;
             margin: 0;
@@ -14,7 +19,7 @@
             position: absolute;
             bottom: 40px;
             left: 40px;
-            width: 260px;
+            width: 400px;
             background: rgba(30, 30, 30, 0.5);
             border-radius: 0;
             box-shadow: 0 2px 12px #0008;
@@ -25,7 +30,7 @@
         }
         .bar-bg {
             width: 100%;
-            height: 18px;
+            height: 28px;
             background: #232323;
             border-radius: 0;
             overflow: hidden;
@@ -58,23 +63,23 @@
             pointer-events: none;
         }
         .bar-label {
-            font-size: 12px;
+            font-size: 18px;
             color: #eee;
-            letter-spacing: 1px;
-            text-shadow: 0 1px 2px #000a;
+            letter-spacing: 1.5px;
+            text-shadow: 0 1.5px 3px #000a;
             margin: 0;
             padding: 0;
             position: relative;
-            left: 8px;
+            left: 12px;
         }
         .bar-value {
-            font-size: 12px;
+            font-size: 18px;
             color: #fff;
-            text-shadow: 0 1px 2px #000a;
+            text-shadow: 0 1.5px 3px #000a;
             margin: 0;
             padding: 0;
             position: relative;
-            right: 8px;
+            right: 12px;
         }
     </style>
 </head>
@@ -129,7 +134,7 @@
         // Example values, you can update these dynamically
         let health = 11, maxHealth = 100;
         let mana = 60, maxMana = 100;
-        let stamina = 90, maxStamina = 100;
+        let stamina = 2, maxStamina = 100;
 
         function updateBars() {
             document.getElementById('health-bar').style.width = (health / maxHealth * 100) + '%';
