--- a/second-cam-graphic.html
+++ b/second-cam-graphic.html
@@ -78,7 +78,7 @@
         <div class="overlay">
             <div class="footer-bar">
                 <span class="red-dot"></span>
-                BED CAM
+                LIVE CAM
             </div>
         </div>
     </div>
