--- a/animated-polka-bar-footer.html
+++ b/animated-polka-bar-footer.html
@@ -19,7 +19,7 @@
             right: 0;
             z-index: 1000;
             width: 100vw;
-            height: 54px;
+            height: 40px;
             overflow: hidden;
             background: linear-gradient(90deg, #282a36 0%, #44475a 100%);
             border-radius: 18px 18px 0 0;
@@ -114,7 +114,7 @@
     <footer class="bar-container">
         <div class="polka-dots" id="polkaDots"></div>
         <div class="ad-content">
-            <span class="ad-title">YOUR AD HERE</span>
+            <span class="ad-title">karlsune @ twitch.tv</span>
         </div>
     </footer>
     <script>
