style: update ad description for clarity and add new project links in index

--- a/animated-polka-bar-barber-style.html
+++ b/animated-polka-bar-barber-style.html
@@ -129,7 +129,7 @@
         <div class="polka-dots" id="polkaDots"></div>
         <div class="ad-content">
             <span class="ad-title">Karlsune</span>
-            <span class="ad-desc">Upgrade your look with precision tech streams from Karlsune. Where style meets the future.</span>
+            <span class="ad-desc">Upgrade your look with precision tech streams from Karlsune. Where style meets streamer's university.</span>
             <button class="cta-btn">Join the chat today</button>
         </div>
     </div>
