style: create animated polka bar personal footer and update index with new links and content

--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
         <p><a href="business/index.html">Business Subpage</a></p>
         <p><a href="construction/index.html">Under Construction Subpage</a></p>
         <p><a href="animated-polka-bar.html">Animated banner ad placement bar</a></p>
-        <p><a href="animated-polka-bar-footer.html">Animated footer ad placement bar</a></p>
-        <p><a href="animated-polka-bar-barber-style.html">Animated barber style ad placement bar</a></p>
-        <p><a href="animated-polka-bar-barber-footer.html">Animated footer ad placement bar</a></p>
+        <p><a href="animated-polka-bar-footer.html">Animated footer ad placement bar for twitch.tv</a></p>
         <p><a href="clock-web-app.htm">JS clock applet</a></p>
       </section>
 
@@ -128,13 +126,22 @@
       <section id="occupation">
         <h2>#occupation</h2>
         <p>
-          I am currently pursuing a bachelors in engineering/medtech at KTH. My passion for healthcare and helping others drives me to learn how technology can improve care. I aim to combine my technical skills with compassion to make a positive impact in the world.
+          I am currently pursuing a bachelors in engineering/medtech at a top school. 
+        </p>
+        <h2>#why</h2>
+        <p>
+          My passion for fitness, wellbeing and helping others drives me to learn more about how technology improves people's lives.
+        </p>
+        <h2>#how</h2>
+        <p>
+          I believe that by leveraging technology, we can create innovative solutions that enhance people's lives and promote overall well-being.
         </p>
       </section>
 
       <section id="skills">
         <h2>#skills</h2>
         <ul class="skills-list">
+          <li>vibe coding</li>
           <li>html</li>
           <li>css</li>
           <li>js</li>
@@ -144,7 +151,15 @@
           <li>github</li>
           <li>gaming</li>
           <li>web design</li>
+          <li>photography</li>
         </ul>
+      </section>
+
+      <section id="gallery">
+        <h2>#gallery</h2>
+        <p><img class="example-img" src="./icon/example.png" alt="sample screenshot of my twitch channel using a dummy image"/></p>
+        <p>more to come!</p>
+        
       </section>
 
     </main>
@@ -156,6 +171,8 @@
       <section id="links">
         <p><a href="https://github.com/karlsune">github</a></p>
         <p><a href="https://www.linkedin.com/in/karlsune/">linkedin</a></p>
+        <p><a href="https://www.twitch.tv/karlsune">twitch</a></p>
+        <p><a href="https://www.instagram.com/karlsunes/">instagram</a></p>
 
         <p><a href="#top">top</a></p>
       </section>
