style: update business index with new title, description, and content; add OBS rainbow overlay HTML files

--- a/business/index.html
+++ b/business/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Call Soon Services AB</title>
+  <title>Lorem Ipsum Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Reliable and affordable yard work, handyman, and personal services in Tynningö.">
+  <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit.">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     :root {
@@ -128,70 +128,68 @@
 </head>
 <body>
   <header>
-    <h1>Call Soon Services</h1>
-    <p>Reliable yard work, handyman, and personal services in Tynningö</p>
+    <h1>Karl Sune Services</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     <nav>
-      <a href="#about">Om oss</a>
-      <a href="#services">Tjänster</a>
-      <a href="#market">Marknad</a>
-      <a href="#contact">Kontakt</a>
+      <a href="#about">Lorem</a>
+      <a href="#services">Ipsum</a>
+      <a href="#market">Dolor</a>
+      <a href="#contact">Sit</a>
     </nav>
   </header>
   <main>
     <section id="about">
-      <h2>Om oss</h2>
+      <h2>Lorem Ipsum</h2>
       <div class="contact-card">
-        <div><strong>Telefon:</strong> <a href="#">[redacted]</a></div>
-        <div><strong>E-post:</strong> <a href="#">[redacted]</a></div>
-        <div><strong>Adress:</strong> [redacted]</div>
-        <span>Org.nr: [redacted]</span>
+        <div><strong>Telefon:</strong> <a href="#">000-000000</a></div>
+        <div><strong>E-post:</strong> <a href="#">lorem@ipsum.com</a></div>
+        <div><strong>Adress:</strong> Loremvägen 1, Ipsumstad</div>
+        <span>Org.nr: 123456-7890</span>
       </div>
       <p>
-        Vi erbjuder pålitliga och prisvärda tjänster inom trädgårdsarbete, hantverk och personlig träning till privatpersoner och företag i Tynningö med omnejd. Vårt mål är att leverera kundnöjdhet i varje uppdrag.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur consectetur, nisl nisi consectetur nisi, euismod euismod nisi nisi euismod.
       </p>
     </section>
     <section id="services">
-      <h2>Våra tjänster</h2>
+      <h2>Ipsum Dolor</h2>
       <div class="value-props">
-        <div class="value-prop">Trädgårdsarbete<br><span style="font-weight:400;color:var(--muted);font-size:0.98em;">Gräsklippning, krattning, trimning, plantering</span></div>
-        <div class="value-prop">Hantverk<br><span style="font-weight:400;color:var(--muted);font-size:0.98em;">Reparationer, målning, montering, städning</span></div>
-        <div class="value-prop">Personlig träning<br><span style="font-weight:400;color:var(--muted);font-size:0.98em;">Träning, hälsa, massage (framtid)</span></div>
-        <div class="value-prop">Nöjd kund-garanti</div>
-        <div class="value-prop">Helt svenskägt & drivet</div>
-        <div class="value-prop">Snabb respons & pålitlig service</div>
+        <div class="value-prop">Lorem<br><span style="font-weight:400;color:var(--muted);font-size:0.98em;">Ipsum dolor sit amet</span></div>
+        <div class="value-prop">Dolor<br><span style="font-weight:400;color:var(--muted);font-size:0.98em;">Sit amet lorem ipsum</span></div>
+        <div class="value-prop">Amet<br><span style="font-weight:400;color:var(--muted);font-size:0.98em;">Consectetur adipiscing elit</span></div>
+        <div class="value-prop">Elit lorem</div>
+        <div class="value-prop">Ipsum dolor</div>
+        <div class="value-prop">Sit amet elit</div>
       </div>
       <ul>
-        <li>Timdebitering & paketpriser</li>
-        <li>Abonnemang för regelbundet underhåll</li>
-        <li>Säsongserbjudanden och lojalitetsprogram</li>
+        <li>Lorem ipsum dolor sit amet</li>
+        <li>Consectetur adipiscing elit</li>
+        <li>Sed do eiusmod tempor</li>
       </ul>
     </section>
     <section id="market">
-      <h2>Marknad & Differentiering</h2>
+      <h2>Dolor Sit Amet</h2>
       <ul>
-        <li>Vi vänder oss till villaägare, äldre, yrkesverksamma, småföretagare och fastighetsägare inom 25 km från Norra Tynningö.</li>
-        <li>Personlig, lokal och pålitlig service.</li>
-        <li>Flexibel, säsongsanpassad verksamhet för maximal nytta och minskade kostnader.</li>
-        <li>Fokus på kärnkompetens och kundrelationer.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+        <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
       </ul>
     </section>
     <section id="contact">
-      <h2>Kontakt & Investering</h2>
+      <h2>Contact</h2>
       <p>
-        Intresserad av våra tjänster eller av att investera i ett växande lokalt företag? Kontakta oss för mer information eller för att diskutera samarbetsmöjligheter.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       </p>
       <ul>
-        <li><strong>Telefon:</strong> <a href="#">[redacted]</a></li>
-        <li><strong>E-post:</strong> <a href="#">[redacted]</a></li>
-        <li><strong>Adress:</strong> [redacted]</li>
+        <li><strong>Telefon:</strong> <a href="#">000-000000</a></li>
+        <li><strong>E-post:</strong> <a href="#">lorem@ipsum.com</a></li>
+        <li><strong>Adress:</strong> Loremvägen 1, Ipsumstad</li>
       </ul>
       <p style="color:var(--muted);font-size:0.98em;">
-        <strong>Investeringsmöjlighet:</strong> Vi söker 50 000 SEK i angel funding. Kontakta oss för mer information.
+        <strong>Lorem:</strong> Ipsum dolor sit amet, consectetur.
       </p>
     </section>
   </main>
   <div class="footer">
-    &copy; 2025 [redacted]. All rights reserved.
+    &copy; 2025 Lorem Ipsum. All rights reserved.
   </div>
 </body>
 </html>
